--- a/app.yaml
+++ b/app.yaml
@@ -1,18 +1,21 @@
 runtime: python27
 api_version: 1
-threadsafe: yes
+threadsafe: true
 
 handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
 
-- url: .*
-  script: main.app
+- url: /bootstrap
+  static_dir: bootstrap
+
+- url: /.*
+  script: guestbook.app
 
 libraries:
 - name: webapp2
-  version: "2.5.2"
-
+  version: latest
 - name: jinja2
-  version: "2.6"
+  version: latest
+
