Addition of index

--- a/index.yaml
+++ b/index.yaml
@@ -4,3 +4,9 @@ indexes:
   properties:
   - name: date
     direction: desc
+
+- kind : Game
+  ancestor : yes
+  properties :
+    - name : name
+      direction : desc
